Use Structured Concurrency instead of CompletableFutures; add logging to services; refactoring